Linux fixes